--- a/Lab 3 - Wakey Wakey Coffee Shop.csproj
+++ b/Lab 3 - Wakey Wakey Coffee Shop.csproj
@@ -72,6 +72,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="shoppingCart.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,13 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="shoppingCart.resx">
       <DependentUpon>shoppingCart.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +115,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\drinksMenuPhoto.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\foodMenuPhoto.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dessertMenuPhoto.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
