--- a/Lab 3 - Wakey Wakey Coffee Shop.csproj
+++ b/Lab 3 - Wakey Wakey Coffee Shop.csproj
@@ -90,6 +90,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckOut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CheckOut.Designer.cs">
+      <DependentUpon>CheckOut.cs</DependentUpon>
+    </Compile>
     <Compile Include="DessertMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     <Compile Include="shoppingCart.Designer.cs">
       <DependentUpon>shoppingCart.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CheckOut.resx">
+      <DependentUpon>CheckOut.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DessertMenu.resx">
       <DependentUpon>DessertMenu.cs</DependentUpon>
     </EmbeddedResource>
